<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="com.mobilerepair.app.creditcardui.MainActivity"
    android:background="#000000">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:weightSum="2"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:textSize="@dimen/txt_size"
        android:layout_weight="1"
        android:textColor="#ffff"/>

    <Button
        android:layout_width="@dimen/btn_wdt"
        android:layout_height="@dimen/btn_hgt"
        android:layout_marginLeft="@dimen/btn1_lft"
        android:layout_weight="1"
        android:background="@android:drawable/btn_default"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/mrgn_top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt2"
            android:textSize="@dimen/txt_size"
            android:layout_weight="1"
            android:textColor="#ffff"/>

        <Button
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_hgt"
            android:layout_marginLeft="@dimen/btn2_lft"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/mrgn_top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt3"
            android:layout_weight="1"
            android:textSize="@dimen/txt_size"
            android:textColor="#ffff"/>

        <Button
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_hgt"
            android:layout_marginLeft="@dimen/btn3mrg_lft"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/layout4mrg_top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt4"
            android:layout_weight="1"
            android:textSize="@dimen/txt_size"
            android:textColor="#ffff"/>

        <Button
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_hgt"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/btn4mrg_lft"
            android:background="@android:drawable/btn_default"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/mrgn_top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt5"
            android:textSize="@dimen/txt_size"
            android:layout_weight="1"
            android:textColor="#ffff"/>

        <Button
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_hgt"
            android:layout_marginLeft="@dimen/btn5mrg_lft"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/mrgn_top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt6"
            android:textSize="@dimen/txt_size"
            android:layout_weight="1"
            android:textColor="#ffff"/>

        <Button
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_hgt"
            android:layout_marginLeft="@dimen/btnmrg_lft"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/compute_mrgtop"
        android:layout_marginRight="@dimen/compute_mrgright"
        android:layout_marginLeft="@dimen/compute_mrglft"
        android:weightSum="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/compute_btnhgt"
        android:text="@string/compute"
        android:textSize="@dimen/compute_txtsize"
        android:id="@+id/button"
        android:layout_weight="1"
        android:background="@android:drawable/btn_default"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="@dimen/mrgn_top"
        android:layout_marginRight="@dimen/compute_mrgright"
        android:layout_marginLeft="@dimen/compute_mrglft">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/compute_btnhgt"
            android:text="@string/clear"
            android:textSize="@dimen/compute_txtsize"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"/>
    </LinearLayout>


</LinearLayout>
